// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/atoms/Button Basic 1`] = `
<a
  className="sc-bdvvaa hvjTJg"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  ボタン
</a>
`;

exports[`Storyshots components/atoms/FeaturedImage Basic 1`] = `
<div
  className="sc-gsDJrp fwMPMY"
>
  <div
    style={
      Object {
        "paddingBottom": "100%",
        "position": "relative",
      }
    }
  >
    <img
      alt="My CDN placeholder"
      height={100}
      src="http://placehold.jp/150x150.png"
      style={
        Object {
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": "cover",
          "position": "absolute",
        }
      }
      width={100}
    />
  </div>
</div>
`;

exports[`Storyshots components/atoms/FormatDate Basic 1`] = `"2021年01月01日"`;

exports[`Storyshots components/atoms/FormatDate Empty Date 1`] = `"2019年06月24日"`;

exports[`Storyshots components/atoms/FormatDate With Time Zone 1`] = `"2021年04月26日"`;

exports[`Storyshots components/atoms/H1 Basic 1`] = `
<h1
  className="sc-dkPtyc eFQjiB"
>
  タイトル
</h1>
`;

exports[`Storyshots components/atoms/H2 Basic 1`] = `
<h2
  className="sc-hKwCoD heHrdu"
>
  タイトル
</h2>
`;

exports[`Storyshots components/atoms/Header Basic 1`] = `
<section
  className="sc-eCImvq kyVKoc"
>
  <header
    className="sc-kDThTU btnCGw"
  >
    <div
      className="sc-jRQAMF gRyFIy"
    >
      <a
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <img
          alt=""
          src="/profile.png"
        />
      </a>
    </div>
    <h1
      className="sc-dkPtyc eFQjiB"
    >
      <a
        className="sc-jrQzUz ZDMxJ"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Hidetoshi Yanagisawa
      </a>
    </h1>
    <p
      className="sc-furvIG sc-pVTma desEiY jdyjvz"
    >
      Full-stack Web Developer
    </p>
    <div
      className="sc-gKckTs eNpRCx"
    >
      <a
        className="sc-iCfLBT fjsuBo"
        href="https://afternoon-peak-11400.herokuapp.com/"
        rel="noopener"
        target="_blank"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
          <polyline
            points="9 22 9 12 15 12 15 22"
          />
        </svg>
        Website
      </a>
      <a
        className="sc-iCfLBT fjsuBo"
        href="https://twitter.com/ultrasevenstar1"
        rel="noopener"
        target="_blank"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
          />
        </svg>
        Twitter
      </a>
      <a
        className="sc-iCfLBT fjsuBo"
        href="https://github.com/yanagisawahidetoshi"
        rel="noopener"
        target="_blank"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
          />
        </svg>
        Github
      </a>
      <a
        className="sc-iCfLBT fjsuBo"
        href="https://www.linkedin.com/in/hidetoshi-yanagisawa-a6063b132/"
        rel="noopener"
        target="_blank"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
          />
          <rect
            height="12"
            width="4"
            x="2"
            y="9"
          />
          <circle
            cx="4"
            cy="4"
            r="2"
          />
        </svg>
        LinkedIn
      </a>
    </div>
  </header>
</section>
`;

exports[`Storyshots components/atoms/HeaderImage Basic 1`] = `
<div
  className="sc-jRQAMF gRyFIy"
>
  <a
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <img
      alt=""
      src="/profile.png"
    />
  </a>
</div>
`;

exports[`Storyshots components/atoms/Pagination Basic 1`] = `
<div
  className="sc-iqsfdx hZJoli"
>
  <a
    className="sc-bdvvaa hvjTJg"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    ← Newer Posts
  </a>
  <a
    className="sc-bdvvaa hvjTJg"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Older Posts →
  </a>
</div>
`;

exports[`Storyshots components/atoms/Pagination Is First 1`] = `
<div
  className="sc-iqsfdx hZJoli"
>
  <a
    className="sc-bdvvaa hvjTJg"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Older Posts →
  </a>
</div>
`;

exports[`Storyshots components/atoms/Pagination Is Last 1`] = `
<div
  className="sc-iqsfdx hZJoli"
>
  <a
    className="sc-bdvvaa hvjTJg"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    ← Newer Posts
  </a>
</div>
`;

exports[`Storyshots components/atoms/Share Basic 1`] = `
<div
  className="sc-crHlIS LHSwI"
>
  <h2
    className="sc-hKwCoD heHrdu"
  >
    Share This Post
  </h2>
  <a
    aria-label="Share on Facebook"
    className="sc-egiSv jEAXSK"
    href="https://www.facebook.com/sharer/sharer.php?u=https://google.com"
    rel="noopener"
    target="_blank"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
      />
    </svg>
  </a>
  <a
    aria-label="Share on Twitter"
    className="sc-egiSv jEAXSK"
    href="https://twitter.com/intent/tweet?text=%E3%82%BF%E3%82%A4%E3%83%88%E3%83%AB&url=https://google.com"
    rel="noopener"
    target="_blank"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
      />
    </svg>
  </a>
  <a
    aria-label="Share on LinkedIn"
    className="sc-egiSv jEAXSK"
    href="https://www.linkedin.com/shareArticle?mini=true&url=https://google.com&title=%E3%82%BF%E3%82%A4%E3%83%88%E3%83%AB"
    rel="noopener"
    target="_blank"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
      />
      <rect
        height="12"
        width="4"
        x="2"
        y="9"
      />
      <circle
        cx="4"
        cy="4"
        r="2"
      />
    </svg>
  </a>
  <a
    aria-label="Share by Email"
    className="sc-egiSv jEAXSK"
    href="mailto:?subject=%E3%82%BF%E3%82%A4%E3%83%88%E3%83%AB&body=https://google.com"
    rel="noopener"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
      />
      <polyline
        points="22,6 12,13 2,6"
      />
    </svg>
  </a>
</div>
`;

exports[`Storyshots components/atoms/Social Basic 1`] = `
<div
  className="sc-gKckTs eNpRCx"
>
  <a
    className="sc-iCfLBT fjsuBo"
    href="https://google.co.jp"
    rel="noopener"
    target="_blank"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
      />
      <polyline
        points="9 22 9 12 15 12 15 22"
      />
    </svg>
    Website
  </a>
  <a
    className="sc-iCfLBT fjsuBo"
    href="https://twitter.com/ultrasevenstar1"
    rel="noopener"
    target="_blank"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
      />
    </svg>
    Twitter
  </a>
  <a
    className="sc-iCfLBT fjsuBo"
    href="https://github.com/yanagisawahidetoshi"
    rel="noopener"
    target="_blank"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
      />
    </svg>
    Github
  </a>
  <a
    className="sc-iCfLBT fjsuBo"
    href="https://www.linkedin.com/in/hidetoshi-yanagisawa-a6063b132/"
    rel="noopener"
    target="_blank"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
      />
      <rect
        height="12"
        width="4"
        x="2"
        y="9"
      />
      <circle
        cx="4"
        cy="4"
        r="2"
      />
    </svg>
    LinkedIn
  </a>
</div>
`;

exports[`Storyshots components/atoms/Summary Basic 1`] = `
<div
  className="sc-ksdxAp cxqwuo"
>
  <h1
    className="sc-dkPtyc eFQjiB"
  >
    <a
      className="sc-hBURRC cGWpSp"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      rタイトル
    </a>
  </h1>
  <span
    className="sc-fotPbf cTAbuV"
  >
    2021-01-01
  </span>
  <p
    className="sc-bqiQRQ hzugav"
  >
    hogehoge
  </p>
  <a
    className="sc-fFehDp ghjnCc"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Continue Reading →
  </a>
</div>
`;

exports[`Storyshots components/pages/PageIndex Basic 1`] = `
<main>
  <section
    className="sc-eCImvq kyVKoc"
  >
    <header
      className="sc-kDThTU btnCGw"
    >
      <div
        className="sc-jRQAMF gRyFIy"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <img
            alt=""
            src="/profile.png"
          />
        </a>
      </div>
      <h1
        className="sc-dkPtyc eFQjiB"
      >
        <a
          className="sc-jrQzUz ZDMxJ"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Hidetoshi Yanagisawa
        </a>
      </h1>
      <p
        className="sc-furvIG sc-pVTma desEiY jdyjvz"
      >
        Full-stack Web Developer
      </p>
      <div
        className="sc-gKckTs eNpRCx"
      >
        <a
          className="sc-iCfLBT fjsuBo"
          href="https://afternoon-peak-11400.herokuapp.com/"
          rel="noopener"
          target="_blank"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
            />
            <polyline
              points="9 22 9 12 15 12 15 22"
            />
          </svg>
          Website
        </a>
        <a
          className="sc-iCfLBT fjsuBo"
          href="https://twitter.com/ultrasevenstar1"
          rel="noopener"
          target="_blank"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
            />
          </svg>
          Twitter
        </a>
        <a
          className="sc-iCfLBT fjsuBo"
          href="https://github.com/yanagisawahidetoshi"
          rel="noopener"
          target="_blank"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
            />
          </svg>
          Github
        </a>
        <a
          className="sc-iCfLBT fjsuBo"
          href="https://www.linkedin.com/in/hidetoshi-yanagisawa-a6063b132/"
          rel="noopener"
          target="_blank"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
            />
            <rect
              height="12"
              width="4"
              x="2"
              y="9"
            />
            <circle
              cx="4"
              cy="4"
              r="2"
            />
          </svg>
          LinkedIn
        </a>
      </div>
    </header>
  </section>
  <section
    className="sc-eCImvq kyVKoc"
  >
    <div
      className="sc-bkkfTU bHJXkN"
    >
      <div
        className="sc-ksdxAp cxqwuo"
      >
        <h1
          className="sc-dkPtyc eFQjiB"
        >
          <a
            className="sc-hBURRC cGWpSp"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            タイトル
          </a>
        </h1>
        <span
          className="sc-fotPbf cTAbuV"
        >
          2021-01-01
        </span>
        <p
          className="sc-bqiQRQ hzugav"
        >
          内容
        </p>
        <a
          className="sc-fFehDp ghjnCc"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Continue Reading →
        </a>
      </div>
    </div>
    <div
      className="sc-bkkfTU bHJXkN"
    >
      <div
        className="sc-ksdxAp cxqwuo"
      >
        <h1
          className="sc-dkPtyc eFQjiB"
        >
          <a
            className="sc-hBURRC cGWpSp"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            タイトル2
          </a>
        </h1>
        <span
          className="sc-fotPbf cTAbuV"
        >
          2021-02-02
        </span>
        <p
          className="sc-bqiQRQ hzugav"
        >
          内容2
        </p>
        <a
          className="sc-fFehDp ghjnCc"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Continue Reading →
        </a>
      </div>
    </div>
    <div
      className="sc-bkkfTU bHJXkN"
    >
      <div
        className="sc-ksdxAp cxqwuo"
      >
        <h1
          className="sc-dkPtyc eFQjiB"
        >
          <a
            className="sc-hBURRC cGWpSp"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            タイトル3
          </a>
        </h1>
        <span
          className="sc-fotPbf cTAbuV"
        >
          2021-03-03
        </span>
        <p
          className="sc-bqiQRQ hzugav"
        >
          内容3
        </p>
        <a
          className="sc-fFehDp ghjnCc"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Continue Reading →
        </a>
      </div>
    </div>
  </section>
</main>
`;

exports[`Storyshots components/pages/PagePost Basic 1`] = `
<main>
  <section
    className="sc-eCImvq kyVKoc"
  >
    <header
      className="sc-kDThTU btnCGw"
    >
      <div
        className="sc-jRQAMF gRyFIy"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <img
            alt=""
            src="/profile.png"
          />
        </a>
      </div>
      <h1
        className="sc-dkPtyc eFQjiB"
      >
        <a
          className="sc-jrQzUz ZDMxJ"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Hidetoshi Yanagisawa
        </a>
      </h1>
      <p
        className="sc-furvIG sc-pVTma desEiY jdyjvz"
      >
        Full-stack Web Developer
      </p>
      <div
        className="sc-gKckTs eNpRCx"
      >
        <a
          className="sc-iCfLBT fjsuBo"
          href="https://afternoon-peak-11400.herokuapp.com/"
          rel="noopener"
          target="_blank"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
            />
            <polyline
              points="9 22 9 12 15 12 15 22"
            />
          </svg>
          Website
        </a>
        <a
          className="sc-iCfLBT fjsuBo"
          href="https://twitter.com/ultrasevenstar1"
          rel="noopener"
          target="_blank"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
            />
          </svg>
          Twitter
        </a>
        <a
          className="sc-iCfLBT fjsuBo"
          href="https://github.com/yanagisawahidetoshi"
          rel="noopener"
          target="_blank"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
            />
          </svg>
          Github
        </a>
        <a
          className="sc-iCfLBT fjsuBo"
          href="https://www.linkedin.com/in/hidetoshi-yanagisawa-a6063b132/"
          rel="noopener"
          target="_blank"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
            />
            <rect
              height="12"
              width="4"
              x="2"
              y="9"
            />
            <circle
              cx="4"
              cy="4"
              r="2"
            />
          </svg>
          LinkedIn
        </a>
      </div>
    </header>
  </section>
  <section>
    <section
      className="sc-eCImvq kyVKoc"
    >
      <div
        className="sc-bkkfTU bHJXkN"
      >
        <div
          className="sc-dJjZJu cfgrzK"
        >
          <h1>
            タイトル
          </h1>
          <p>
            2021-01-01
          </p>
          <span />
        </div>
        <article
          className="sc-ieebsP bCTWZN"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "テキスト",
              }
            }
          />
        </article>
      </div>
    </section>
  </section>
</main>
`;
